[workspace]
members = [
    "crates/fl-www",
    "crates/fl-www-cli",
    "crates/fl-www-core",
    "crates/fl-www-macros",
    "crates/fl-www-common",
    "crates/fl-www-agents",
    # "crates/fl-www-backend",
    "crates/yew-query",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
codegen-units = 1
opt-level     = "z"
