[workspace]
members = [
    # Platform Agnostic Crates
    "crates/fl-www-core",

    # Client-side Crates
    "crates/fl-www",
    "crates/fl-www-common",
    "crates/fl-www-agents",
    "crates/yew-query",

    # Server-side Crates
    "crates/fl-www-cli",
    "crates/fl-www-backend",
    "crates/fl-www-migrations",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
codegen-units = 1
opt-level     = "z"
