[package]
name = "fl-www-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.59"
bounce = "0.8"
thiserror = "1"
typed-builder = "0.16.0"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }

fl-www-core = { path = "../core" }

# Stellation
stellation-bridge = "0.3.0"


[features]
resolvable = []
