[package]
name = "fl-www-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Workspace
fl-www-core = { path = "../core" }
fl-www-models = { path = "../models" }
fl-www-backend = { path = "../backend" }

# Stellation
stellation-bridge = "0.3.0"

time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.59"
bounce = "0.8"
thiserror = "1"
typed-builder = "0.16.0"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
reqwest = { version = "0.11.11", features = [
    "json",
    "trust-dns",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
], default-features = false }
sea-orm = { version = "0.9.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
], optional = true }
octocrab = { version = "0.16.0", default-features = false, features = [
    "rustls",
] }
futures = "0.3.21"
anyhow = "1"

[features]
resolvable = ["dep:sea-orm"]
