[package]
name = "fl-www-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Workspace
fl-www-core = { path = "../core" }
fl-www-backend = { path = "../backend", optional = true }
fl-www-markdown = { path = "../markdown" }

# Stellation
stellation-bridge = "0.3.0"

time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.59"
bounce = "0.8"
thiserror = "1"
typed-builder = "0.16.0"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
reqwest = { version = "0.11.11", features = [
    "json",
    "trust-dns",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
], default-features = false, optional = true }
sea-orm = { version = "0.9.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
], optional = true }
octocrab = { version = "0.16.0", default-features = false, features = [
    "rustls",
], optional = true }
futures = "0.3.21"
anyhow = "1"
once_cell = "1.13.0"
prokio = "0.1"

syntect = { version = "5.0.0", default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
], optional = true }

[features]
resolvable = [
    "dep:sea-orm",
    "dep:fl-www-backend",
    "dep:syntect",
    "dep:octocrab",
    "dep:reqwest",
    "fl-www-markdown/parser",
]
