[package]
name = "fl-www-agents"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-common = { path = "../fl-www-common" }
fl-www-core = { path = "../fl-www-core" }

wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
# web-sys
wee_alloc = "0.4.5"
futures = "0.3.21"
gloo = { version = "0.7.0", features = ["futures"] }

console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.17"
console_error_panic_hook = "0.1.7"

yew = "0.19.3"
yew-agent = "0.1.0"

# bincode = "1.0"
serde = "1.0.137"

once_cell = "1.12.0"

pulldown-cmark = { version = "0.9.1", default-features = false }
unicode-segmentation = "1.9.0"

syntect = { version = "5.0.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
