[package]
name = "fl-www-agents"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-common = { path = "../fl-www-common" }
fl-www-core = { path = "../fl-www-core" }

wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
js-sys = "0.3.61"
futures = "0.3.21"
gloo = { version = "0.8.0", features = ["futures"] }
# web-sys

console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.17"
console_error_panic_hook = "0.1.7"

yew = "0.19.3"
yew-agent = "0.1.0"

# bincode = "1.0"
serde = "1.0.139"

once_cell = "1.13.0"

pulldown-cmark = { version = "0.9.2", default-features = false }
unicode-segmentation = "1.9.0"

syntect = { version = "5.0.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
