[package]
name = "fl-www-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-core = { path = "../fl-www-core" }

serde_json = "1.0.79"
serde = "1.0.136"

chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }

console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.14"

async-trait = "0.1.52"

thiserror = "1.0.30"
