[package]
name = "fl-www-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-core = { path = "../fl-www-core" }

# Data Serialisation / Deserialisation
serde_json = "1.0.79"
serde = "1.0.136"

# Date
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }

# Logging
log = "0.4.14"

# Async I/O
async-trait = "0.1.52"
tokio-stream = { version = "0.1.9", features = ["net"] }
tokio = { version = "1.19.2", features = ["full"] }
warp = { version = "0.3.2" }
futures = "0.3.21"

# Error Handling / Ergonomics
thiserror = "1.0.30"
typed-builder = "0.10.0"
anyhow = "1.0.57"
