[package]
name = "fl-www-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-core = { path = "../fl-www-core" }

async-trait = "0.1.56"
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"

structopt = "0.3.26"
anyhow = "1.0.57"

chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }

serde_json = "1.0.81"
serde = "1.0.137"

pulldown-cmark = { version = "0.9.1", default-features = false }
unicode-segmentation = "1.9.0"
atom_syndication = "0.11.0"
