[package]
name = "fl-www-cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "landctl"
path = "src/main.rs"

[dependencies]
fl-www-core = { path = "../fl-www-core" }
fl-www-backend = { path = "../fl-www-backend" }

# Logging
log = "0.4.17"
env_logger = "0.9.0"

# Async I/O
async-trait = "0.1.56"
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.26"

# Command Line
anyhow = "1.0.59"
clap = { version = "3.2.11", features = ["derive"] }
dotenv = "0.15.0"

# Date
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }

# Data Serialisation / Deserialisation
serde_json = "1.0.82"
serde = "1.0.139"

# Content Generation
pulldown-cmark = { version = "0.9.2", default-features = false }
unicode-segmentation = "1.9.0"
atom_syndication = "0.11.0"

# Performance
jemallocator = "0.5.0"
