[package]
name = "fl-www-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-macros = { path = "../fl-www-macros" }
fl-www-core = { path = "../fl-www-core" }

wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
# web-sys
futures = "0.3.21"
gloo = { version = "0.7.0", features = ["futures"] }

log = "0.4.17"

yew = "0.19.3"
stylist = { version = "0.10.0", features = ["yew_integration"] }

serde = "1.0.137"
serde_json = "1.0.81"

thiserror = "1.0.31"
once_cell = "1.12.0"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Window",
  "Blob",
  "Navigator",
  "MediaQueryList",
  "Storage",
  "CssStyleDeclaration",
  "Element",
  "HtmlElement",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollToOptions",
]
