[package]
name = "fl-www-common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-macros = { path = "../fl-www-macros" }
fl-www-core = { path = "../fl-www-core" }

wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
js-sys = "0.3.58"
# web-sys
futures = "0.3.21"
gloo = { version = "0.8.0", features = ["futures"] }

log = "0.4.17"

yew = "0.19.3"
stylist = { version = "0.10.1", features = ["yew_integration"] }

serde = "1.0.139"
serde_json = "1.0.82"

thiserror = "1.0.31"
once_cell = "1.13.0"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Window",
  "Blob",
  "Navigator",
  "MediaQueryList",
  "Storage",
  "CssStyleDeclaration",
  "Element",
  "HtmlElement",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollToOptions",
]
