[package]
name = "fl-www-common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-core = { path = "../fl-www-core" }

wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
js-sys = "0.3.60"
# web-sys
futures = "0.3.21"
gloo = { version = "0.8.0", features = ["futures"] }

log = "0.4.17"

yew = "0.19.3"
stylist = { git = "https://github.com/futursolo/stylist-rs", branch = "css-vars", features = ["yew_integration", "macros", "parser"], default-features = false }

serde = "1.0.139"
serde_json = "1.0.82"

thiserror = "1.0.31"
once_cell = "1.13.0"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Window",
  "Blob",
  "Navigator",
  "MediaQueryList",
  "Storage",
  "CssStyleDeclaration",
  "Element",
  "HtmlElement",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollToOptions",
]
