[package]
name = "fl-www-core"
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
once_cell = "1.13.0"

serde_json = "1.0.82"
serde = { version = "1.0.139", features = ["derive"] }

chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }
typed-builder = "0.10.0"

pulldown-cmark = { version = "0.9.1", default-features = false }

hex = "0.4.3"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"

sea-orm = { version = "0.9.0", optional = true }

[features]
backend = ["dep:sea-orm"]
