[package]
name = "fl-www-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
itertools = "0.10.3"
once_cell = "1.12.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.39"
quote = "1.0.18"
rand = "0.8.5"
syn = { version = "1.0.96", features = ["full", "extra-traits"] }
