[package]
name = "fl-www-macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
itertools = "0.10.3"
once_cell = "1.13.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.40"
quote = "1.0.20"
rand = "0.8.5"
syn = { version = "1.0.98", features = ["full", "extra-traits"] }
