[package]
name = "fl-www-migrations"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "fl_www_migrations"
path = "src/lib.rs"

[dependencies]
fl-www-backend = { path = "../fl-www-backend" }
fl-www-core = { path = "../fl-www-core" }
tokio = { version = "1.20.0", features = ["full"] }

[dependencies.sea-orm-migration]
version = "0.9.0"
features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"]
