[package]
name = "fl-www-migrations"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "landctl-migrations"
path = "src/main.rs"

[lib]
name = "fl_www_migrations"
path = "src/lib.rs"

[dependencies]
fl-www-models = { path = "../models" }
fl-www-core = { path = "../core" }
tokio = { version = "1.20.1", features = ["full"] }

[dependencies.sea-orm-migration]
version = "0.9.0"
features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"]
