[package]
name = "fl-www-migrations"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "landctl-migrations"
path = "src/main.rs"

[lib]
name = "fl_www_migrations"
path = "src/lib.rs"

[dependencies]
fl-www-backend = { path = "../fl-www-backend" }
fl-www-core = { path = "../fl-www-core" }
tokio = { version = "1.20.1", features = ["full"] }

[dependencies.sea-orm-migration]
version = "0.11.3"
features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"]
