[package]
name = "fl-www"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fl-www-core = { path = "../fl-www-core" }
fl-www-common = { path = "../fl-www-common" }
fl-www-agents = { path = "../fl-www-agents" }

bounce = { version = "0.3", features = ["query", "helmet"] }

yew-query = { path = "../yew-query" }

wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
# web-sys
# wee_alloc = "0.4.5"
futures = "0.3.21"
gloo = { version = "0.7.0", features = ["futures"] }
async-trait = "0.1.56"

console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.17"

yew-feather = { git = "https://github.com/futursolo/yew-feather", branch = "compiled" }
yew-router = "0.16.0"
yew = "0.19.3"
yew-agent = "0.1.0"
stylist = { version = "0.10.0", features = ["yew_integration"] }

i18n-embed = { version = "0.13.4", features = ["fluent-system", "web-sys-requester"] }
rust-embed = { version = "6.4.0", features = ["debug-embed"] }
i18n-embed-fl = "0.6.4"
unic-langid = "0.9.0"

chrono = { version = "0.4.19", features = ["wasmbind"] }

once_cell = "1.12.0"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
serde_urlencoded = "0.7.1"

fastrand = "1.7.0"
ahash = "0.7.6"
reqwest = { version = "0.11.10", features = ["json"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Window",
  "MediaQueryList",
  "HtmlMetaElement",
  "HtmlLinkElement",
  "HtmlScriptElement",
  "Storage",
  "CssStyleDeclaration",
  "Element",
  "HtmlElement",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollToOptions",
  "NodeList",
]
