[package]
name = "fl-www-models"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-www-core = { path = "../core", features = ["backend"] }

# Data Serialisation / Deserialisation
serde_json = "1.0.82"
serde = "1.0.139"

# Date
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }

# Logging
log = "0.4.17"

# Async I/O
async-trait = "0.1.56"
tokio-stream = { version = "0.1.9", features = ["net"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.21"

# HTTP
warp = "0.3.2"
octocrab = { version = "0.16.0", default-features = false, features = [
    "rustls",
] }
reqwest = { version = "0.11.11", features = [
    "json",
    "trust-dns",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
], default-features = false }

# ORM
sea-orm = { version = "0.9.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }

# Error Handling / Boilerplate
thiserror = "1.0.31"
typed-builder = "0.10.0"
anyhow = "1.0.59"
once_cell = "1.13.0"
bincode = "1.3.3"
bytes = "1.1.0"
