[package]
name = "fl-www-view"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0" }
fl-www-api = { path = "../api" }
time = { version = "0.3", features = [
    "wasm-bindgen",
    "serde-human-readable",
    "macros",
] }
tracing = "0.1.37"
bounce = { version = "0.8.0", features = ["helmet"] }
stylist = { version = "0.12.0", features = ["yew_integration"] }

# Stellation
stellation-frontend = "0.3.0"
stellation-bridge = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement"]
