[package]
name = "yew-query"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-builder = "0.10.0"
yew = "0.19.3"

wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
js-sys = "0.3.58"
futures = "0.3.24"
async-trait = "0.1.56"

once_cell = "1.13.0"
thiserror = "1.0.31"
log = "0.4.17"
serde = { version = "1.0.139", features = ["rc"] }
serde_json = "1.0.82"
ahash = "0.7.6"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Window",
  "Headers",
  "Response",
  "Request",
  "RequestInit",
  "Url",
  "HtmlScriptElement",
  "Element",
  "HtmlElement",
  "Document",
  "HtmlHeadElement",
]
